fix: fixed video hover & tablet layout

--- a/src/index.pug
+++ b/src/index.pug
@@ -25,7 +25,8 @@ html(lang="ru")
           .hero-left
             p.hero__text  школа <br/> диджитал навыков от <span class="hero__text--italic">практикующих</span> профессионалов
           div.hero-right
-            img(src="images/video.png", alt="video").hero-right__video
+            a(href="/").hero-right__link
+              img(src="images/video.png", alt="video").hero-right__video
             p.hero-right__text О школе 
               span.hero-right__text--bold за 72 секунды
       section.about
@@ -37,7 +38,7 @@ html(lang="ru")
               p.text.about__text Каждый преподаватель это либо специалист нашей студии, либо владелец бизнеса
               a(href="/").link.about__link портфолио студии
           .about__row
-            .about-block.about__image-block
+            .about-block.about__image-block.about__image-block--second
               img(src="images/bg2.svg", alt="")
             .about-block.about__text-block.about__text-block--small
               p.text.about__text.about__text--first Мы не приглашаем именитых гостей ради заголовков 
@@ -46,20 +47,20 @@ html(lang="ru")
             p.text.about__text.about__text--center За 3 года через нас прошло более 7 000 специалистов, среди которых сотрудники
             .companies.about__companies
               .companies__item 
-                img(src="images/tnt.png", alt="TNT").companies__logo
+                img(src="images/tnt.png", alt="TNT").companies__logo.companies__logo--tnt
               .companies__item 
-                img(src="images/cola.png", alt="Coca-Cola").companies__logo
+                img(src="images/cola.png", alt="Coca-Cola").companies__logo.companies__logo--cola
               .companies__item
-                img(src="images/splat.png", alt="Splat").companies__logo
+                img(src="images/splat.png", alt="Splat").companies__logo.companies__logo--splat
               .companies__item
-                img(src="images/blackStar.png", alt="Black-Star").companies__logo
+                img(src="images/blackStar.png", alt="Black-Star").companies__logo.companies__logo--black-star
               .companies__item
-                img(src="images/toyota.png", alt="Toyota").companies__logo
+                img(src="images/toyota.png", alt="Toyota").companies__logo.companies__logo--toyota
               .companies__item 
-                img(src="images/henkel.png", alt="Henkel").companies__logo
+                img(src="images/henkel.png", alt="Henkel").companies__logo.companies__logo--henkel
               .companies__item 
-                img(src="images/baikal.png", alt="Baikal").companies__logo
+                img(src="images/baikal.png", alt="Baikal").companies__logo.companies__logo--baikal
               .companies__item 
-                img(src="images/department.png", alt="Department").companies__logo
+                img(src="images/department.png", alt="Department").companies__logo.companies__logo--department
 
           
