--- a/src/sass/templates/_about.sass
+++ b/src/sass/templates/_about.sass
@@ -50,6 +50,7 @@
         opacity: 0.05
         border-radius: 100%
         filter: blur(150px)
+        z-index: -1px
   &__text
     margin: 0
     &--first
