--- a/src/sass/templates/_hero.sass
+++ b/src/sass/templates/_hero.sass
@@ -20,15 +20,29 @@
       line-height: 85px
   &-right
     padding-top: 13px
+    display: flex
+    flex-direction: column
+    align-items: center
     &__video
       margin-bottom: 13px
     &__text
+      position: relative
       font-family: "ALS Hauss Book", sans-serif
       font-weight: 350
       font-size: 32px
       line-height: 100%
       text-align: center
       color: #FEA430
+      text-decoration: none
+      &::after
+        content: ''
+        width: 0
+        position: absolute
+        left: 0
+        bottom: 0
+        height: 2px
+        background-color: #FEA430
+        transition: all .4s ease-out
       &--bold
         font-family: "ALS Hauss Regular", sans-serif
         font-weight: 500
