fixed hero right text width

--- a/src/sass/_media.sass
+++ b/src/sass/_media.sass
@@ -275,6 +275,11 @@
         &--small
           padding-top: 20px
   
+@media screen and (max-width: 374px)
+  .hero
+    &-right
+      &__text
+        width: 96%
 @media screen and (min-width: 992px)
   .nav
     &-list
