--- a/src/sass/templates/_header.sass
+++ b/src/sass/templates/_header.sass
@@ -45,6 +45,7 @@
     padding-top: 8px
     color: inherit
     &__link
+      position: relative
       color: inherit
       text-decoration: none
       font-weight: 350
@@ -52,3 +53,12 @@
       line-height: 50px
       letter-spacing: -1.25573px
       font-feature-settings: 'pnum' on, 'lnum' on
+      &::after
+        content: ''
+        width: 0
+        position: absolute
+        left: 0
+        bottom: 0
+        height: 2px
+        background-color: #ffffff
+        transition: all .4s ease-out
